# boson

./: .gitignore  Cargo.toml  EXTRACTION.md  README.md
.sentrux/: rules.toml
boson/: Cargo.toml  README.md
boson-axum/src/: lib.rs  router.rs  state.rs
boson-backend-mem/: Cargo.toml  QUALITY.md  README.md
boson-backend-mem/src/: bootstrap.rs  enqueue_rate.rs  error.rs  jobs.rs  leases.rs  lib.rs  mem_queue_backend.rs  runs.rs  store.rs  task_config.rs
boson-backend-mem/tests/: lease_scenarios.rs  queue_scenarios.rs
boson-backend-mem/tests/common/: mod.rs
boson-backend-nats/src/: lib.rs
boson-backend-postgres/src/: lib.rs
boson-backend-redis/src/: lib.rs
boson-backend-sqlite/src/: lib.rs
boson-core/: Cargo.toml  QUALITY.md  README.md
boson-core/src/: error.rs  identity.rs  lib.rs  mode.rs
boson-core/src/backend/: mod.rs  queue_backend.rs
boson-core/src/models/: job.rs  mod.rs  run.rs  task_config.rs  task_stats.rs
boson-core/src/router/: mod.rs  queue_router.rs
boson-macros/: README.md
boson-macros/src/: lib.rs
boson-runtime/: README.md
boson-runtime/src/: bootstrap.rs  builder.rs  global.rs
boson-runtime/src/registry/: mod.rs  registry_impl.rs
boson-runtime/src/worker/: config.rs
boson-telemetry/: Cargo.toml  QUALITY.md  README.md
boson-telemetry/src/: console.rs  global.rs  lib.rs  noop.rs
boson/examples/: remote_enqueue.rs  remote_shared_task.rs  remote_worker.rs
boson/src/: lib.rs  prelude.rs
