[package]
name = "boson-backend-mem"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-memory QueueBackend adapter for tests, CI, and testkit (Zone A)"

[dependencies]
async-trait = { workspace = true }
boson-core = { path = "../boson-core" }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
