[package]
name = "boson-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Portable Boson types, QueueBackend port, and identity hooks (Zone A)"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
